# pdf2obsidian

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_ko.md  SECURITY.md  build.ps1  pyproject.toml  requirements.txt  test.cmd
.github/workflows/: ci.yml
docs/: decisions.md  development-log.md  examples.md  lecture-study-note-template.md  maintenance.md  ollama-setup.md  release-checklist.md  roadmap.md  webapp-plan.md
docs/assets/: README_SCREENSHOTS.md
docs/demo-output/: sample_course.md  sample_lecture.md
docs/samples/: sample_lecture.vtt
src/pdf2obsidian/: __init__.py  main.py
src/pdf2obsidian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pdf2obsidian/core/: __init__.py  converter.py  image_processor.py  lecture_note_writer.py  markdown_writer.py  ocr.py  pdf_compressor.py  pdf_processor.py  transcript_cleaner.py  transcript_processor.py
src/pdf2obsidian/gui/: __init__.py  main_window.py
src/pdf2obsidian/prompts/: __init__.py  lecture_basic.txt  lecture_ollama.txt  lecture_openai.txt  lecture_study_note_ko.txt  output_ebook.txt  output_executive_summary.txt  output_simple_note.txt  output_study_note.txt
src/pdf2obsidian/utils/: __init__.py  logger.py  paths.py
tests/: test_ai_summarizer.py  test_converter.py  test_lecture_note_writer.py  test_lecture_template.py  test_markdown_writer.py  test_ollama_client.py  test_paths.py  test_pdf_processor.py  test_sample_workflows.py  test_transcript_processor.py
tools/: generate_demo_materials.py
(+7 files in other folders)
