[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2obsidian"
version = "0.1.4"
description = "Local PDF, image, and lecture transcript converter for Obsidian Markdown."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cho Kyusong" }]
dependencies = [
    "PySide6>=6.7",
    "PyMuPDF>=1.24",
    "Pillow>=10.4",
]

[project.urls]
Homepage = "https://github.com/Chokyusong/pdf2obsidian"
Repository = "https://github.com/Chokyusong/pdf2obsidian"
Issues = "https://github.com/Chokyusong/pdf2obsidian/issues"

[project.optional-dependencies]
ocr = ["easyocr>=1.7", "pytesseract>=0.3"]
dev = ["pytest>=8.2", "ruff>=0.5", "pyinstaller>=6.8"]

[project.scripts]
pdf2obsidian = "pdf2obsidian.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pdf2obsidian.prompts" = ["*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
